Fix bug with Redis URL parsing
URL class could not handle redis: protocol